[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "two_photon_utils"
version = "0.0.1"
description = "General purpose two photon processing"
authors = [
    {name = "Giocomo Lab 2P Punks", email = "markplitt@gmail.com"},
]
license = {text = "BSD"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "suite2p>=0.13.0",
    "h5py>=3.1.0",
    "tifffile>=2021.4.8",
    "sbxreader",
    "dill>=0.3.0",
    "tables>=3.6.0",
    "pillow>=8.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
